--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,6 +34,9 @@ log = "0.3.8"
 regex = "0.2.2"
 rustc-serialize = "0.3.24"
 
+[dev-dependencies]
+base64 = "0.7.0"
+
 [dependencies.libyubihsm-sys]
 path = "libyubihsm-sys"
 version = "2.0.0"
