--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,6 +33,8 @@ lazy_static = "1.4.0"
 log = "0.3.8"
 regex = "0.2.2"
 rustc-serialize = "0.3.24"
+strum = "0.24"
+strum_macros = "0.24"
 
 [dev-dependencies]
 base64 = "0.7.0"
